--- a/sos.html
+++ b/sos.html
@@ -178,7 +178,7 @@ div.content {
   <div class="jumbotron bg-primary">
     <h1 class="bg-info rounded text-center">Data accessing from cloud</h1>
     <p id="p1" class="rounded text-center"></p>
-    <h1 class="bg-info rounded text-center">Gyrometer reading</h1>
+    <h1 class="bg-info rounded text-center">Gyroscope reading</h1>
     <h1 id="gyrometerValue" class="rounded text-center" style="font-size:50px;"></h1>
     <h1 class="bg-info rounded text-center">Status</h1>
     <h2 id="condition" class="rounded text-center"></h2>
